Vitality Command closes #13

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: Vitality
 main: org.cyberpwn.vitality.Vitality
 version: 1.0
 commands: 
+  vitality:
+    aliases: [vit, vi]
   vtp:
     aliases: [teleport, tp]
   vtpall:
